--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 TZ=UTC
-PORT=3333
-HOST=localhost
+PORT=21098
+HOST=server330.web-hosting.com
 LOG_LEVEL=info
 APP_KEY=SguZCV4_XiU36QyxBAfcwPXCsCl5cFrV
 NODE_ENV=development
-DB_HOST=127.0.0.1
-DB_PORT=5432
+DB_HOST=server330.web-hosting.com
+DB_PORT=21098
 DB_USER=postgres
 DB_PASSWORD=password
 DB_DATABASE=postgres
