--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 TZ=UTC
-PORT=21098
-HOST=server330.web-hosting.com
+PORT=3333
+HOST=localhost
 LOG_LEVEL=info
 APP_KEY=SguZCV4_XiU36QyxBAfcwPXCsCl5cFrV
 NODE_ENV=development
