--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ HOST=localhost
 LOG_LEVEL=info
 APP_KEY=SguZCV4_XiU36QyxBAfcwPXCsCl5cFrV
 NODE_ENV=development
-DB_HOST=server330.web-hosting.com
-DB_PORT=21098
+DB_HOST=127.0.0.1
+DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=password
 DB_DATABASE=postgres
